--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                         <div class="offer__slide">
                             <img src="img/slider/paprika.jpg" alt="paprika">
                         </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/furits.jpg" alt="paprika">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -254,8 +257,8 @@
             </div>
             <div class="call">
                 <div class="subtitle">Или позвоните нам</div>
-                <a href="#" class="link">+3725556667</a>
-                <a href="#" class="link">+3725556666</a>
+                <a href="#" class="link">+372555666</a>
+                <a href="#" class="link">+372555667</a>
             </div>
         </div>
     </footer>
@@ -273,6 +276,6 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
